# calculator

./: .gitignore  LICENSE  README.md  index.html  package.json  vite.config.ts
src/: App.tsx  index.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/application/display/: Display.tsx
src/application/keyboard/: Keyboard.tsx
src/application/secondDisplay/: SecondDisplay.tsx
src/helpers/function/: display.tsx  systemInfo.tsx  theme.tsx
src/helpers/interface/: displaySize.tsx
src/styles/: App.styles.tsx  globalStyle.css  themeMaterial.tsx  themeStyled.tsx
src/styles/application/display/: Display.styles.tsx
src/styles/application/keyboard/: Keyboard.styles.tsx
src/styles/application/secondDisplay/: SecondDisplay.styles.tsx
