[package]
name = "calculator"
version = "0.0.2"
description = "A Tauri App"
authors = ["Sebastian Luc <ninsebastianluc@gmail.com>"]
license = "MIT"
repository = "https://github.com/Apogeum12/calculator"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "thin" # thin or more aggressive "fat"
opt-level = "s"
panic = "abort"
strip = "symbols"
[build]
# For Native compilation add: "target-cpu=native"
# For MacOs and Linux add: "link-arg=-fuse-ld=mold"
rustflags = ["-C", "link-arg=-fuse-ld=mold"]

[lib]
name = "calculatorxd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = [] }
tauri-plugin-window = "2.0.0-alpha"
tauri-plugin-shell = "2.0.0-alpha"
serde_json = "1.0"

[features]
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
