[package]
name = "calculator"
version = "0.8.1-alpha.1"
description = "Tauri Calculator is an app for all platforms; it's a template to test the current status of Tauri projects."
authors = ["Sebastian Luc <ninsebastianluc@gmail.com>"]
license = "MIT"
repository = "https://github.com/Apogeum12/calculator"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "thin" # thin or more aggressive "fat"
opt-level = "s"
panic = "abort"
strip = "symbols"
[build]
# Default target-cpu: generic
# For Native compilation add: "target-cpu=native"
# For Linux use mold linker: "link-arg=-fuse-ld=mold"
# For Windows and (macOs?) use llvm linker: "link-arg=-fuse-ld=lld"
rustflags = ["-C", "target-cpu=generic", "link-arg=-fuse-ld=mold"]

[lib]
name = "calculator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.14", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.21", features = [] }
tauri-plugin-window = "2.0.0-alpha.2"
tauri-plugin-shell = "2.0.0-alpha.6"
serde_json = "1.0"
evalexpr = "11.3.0"

[features]
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
